--- a/app/views/gadgets/_flickr_gadget.erb
+++ b/app/views/gadgets/_flickr_gadget.erb
@@ -1,7 +1,8 @@
+<div id="gallery_photos" class="galleryview"></div>
+
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" ></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" ></script>
 
-<div id="gallery_photos" class="galleryview"></div>
 
 <script type="text/javascript">
 
@@ -10,14 +11,48 @@
   var flickrUrl = prefs.getString("flickr_feed_url");
   
   function createPhotoPanel(data){
+    var html = "<div class='panel'>"
+    html += "<img src='" + data.getElementsByTagName("media:content")[0].getAttribute("url") + "' />"
+    html += "<div class='panel-overlay>"
+    html += "<h2>"
+    html += data.getElementsByTagName("title")[0].childNodes[0].nodeValue;
+    html += "</h2>"
+    html += "<p>"
+    html += data.getElementsByTagName("description")[0].childNodes[0].nodeValue;
+    html += "</p>"
+    html += "</div>"
+    html += "</div>"
+  };
+  
+  function addFilmstrip(data){
+    var html = "<li>"
+    html += "<img src='" + data.getElementsByTagName("media:thumbnail")[0].getAttribute("url") + "' alt='" + data.getElementsByTagName("title")[0].childNodes[0].nodeValue + "' title='" + data.getElementsByTagName("title")[0].childNodes[0].nodeValue + "' />"
+    html += "</li>"
+  }
+  
+  function response(obj){
+    var feed = obj.data.getElementsByTagName("item");
+    var html = "";
+    var filmStrip = "<ul class='filmstrip'>";
+    
+    for (var i = 0; i < feed.length; i++) {
+      html += createPhotoPanel(feed.item(i));
+      filmStrip += addFilmstrip(feed.item(i));
+    };
+
+    filmStrip += "</ul>"
+    document.getElementById('gallery_photos').innerHTML = (html + filmStrip);
     
   };
-  var params = {};
-  params[gadgets.io.RequestParameters.CONTENT_TYPE] = gadgets.io.ContentType.FEED;
-  params[gadgets.io.RequestParameters.NUM_ENTRIES] = 100;
   
+  function getFeed(){
+    var params = {};
+    params[gadgets.io.RequestParameters.CONTENT_TYPE] = gadgets.io.ContentType.DOM;
+    params[gadgets.io.RequestParameters.NUM_ENTRIES] = 100;
+
+    gadgets.io.makeRequest(flickrUrl, response, params);
+  }
+
+  gadgets.util.registerOnLoadHandler(getFeed);
   
-  gadgets.io.makeRequest(flickrUrl, function(data){
-    console.log(data);
-  }, params)
 </script>
