Typo in js function name.

--- a/app/views/gadgets/_flickr_gadget.erb
+++ b/app/views/gadgets/_flickr_gadget.erb
@@ -15,7 +15,7 @@
     return "<img src=" + entryAttribute + "></img>"
   }
     
-  function photosUrl(obj){
+  function photosResponse(obj){
     var jsondata = obj.data;
     
     var html = "<ul>";
